<resources>
    <string name="app_name">工具盒子</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">机智的徐苟山</string>
    <string name="nav_header_subtitle">1419982188@qq.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_video">视频</string>
    <string name="menu_picture">图片</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about">关于</string>

    <string name="author">作者：</string>
    <string name="version">版本：</string>
    <string name="qq">QQ：</string>
    <string name="email">邮箱：</string>
    <string name="github_link">Github：</string>
    <string name="link">链接：</string>

    <string name="author_info">机智的徐苟山</string>
    <string name="qq_info">1419982188</string>
    <string name="email_info">1419982188@qq.com</string>
    <string name="github_link_info">https://github.com/joyzeus</string>
    <string name="link_info">https://github.com/joyzeus/tools</string>

</resources>
