<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_video">

    <fragment
        android:id="@+id/nav_video"
        android:name="com.igeek.tools.ui.activity.ui.video.VideoFragment"
        android:label="@string/menu_video"
        tools:layout="@layout/fragment_video" />

    <fragment
        android:id="@+id/nav_picture"
        android:name="com.igeek.tools.ui.activity.ui.picture.PictureFragment"
        android:label="@string/menu_picture"
        tools:layout="@layout/fragment_picture" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.igeek.tools.ui.activity.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.igeek.tools.ui.activity.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>